--- a/neural_network/TestingGenAlgs.ipynb
+++ b/neural_network/TestingGenAlgs.ipynb
@@ -576,7 +576,7 @@
    ],
    "source": [
     "#establish all of the tics in frame\n",
-    "frame=pd.read_csv(\"stock_names.csv\")\n",
+    "frame=pd.read_csv(\"../data/stock_names.csv\")\n",
     "frame['Ticker']"
    ]
   },
@@ -645,10 +645,10 @@
     "        tic=str(tic)\n",
     "        try:\n",
     "            #read in the training data as a dataframe\n",
-    "            output_values = pd.read_csv('training/' + tic + r'.csv')\n",
+    "            output_values = pd.read_csv('../data/training/' + tic + r'.csv')\n",
     "            #creates an array of input vectors for a given stock and the training days\n",
     "            input_values = [0]*len(output_values.index)\n",
-    "            data = pd.read_csv('normalized_data/' + tic + r'.csv')\n",
+    "            data = pd.read_csv('../data/normalized_data/' + tic + r'.csv')\n",
     "            data = data.set_index('date')\n",
     "            i = 0\n",
     "            #for every wanted data, get the inputs \n",
@@ -683,10 +683,10 @@
     "        tic=str(tic)\n",
     "        try:\n",
     "            #grab testing data\n",
-    "            output_values = pd.read_csv('testing/' + tic + r'.csv')\n",
+    "            output_values = pd.read_csv('../data/testing/' + tic + r'.csv')\n",
     "            #creates an array of input vectors for a given stock and the training days\n",
     "            input_values = [0]*len(output_values.index)\n",
-    "            data = pd.read_csv('normalized_data/' + tic + r'.csv')\n",
+    "            data = pd.read_csv('../data/normalized_data/' + tic + r'.csv')\n",
     "            data = data.set_index('date')\n",
     "            i = 0\n",
     "            for date in output_values.date:\n",
